# mcloop

./: .gitignore  CHECKS.md  CLAUDE.md  LICENSE  PLAN.EXAMPLE.md  PLAN.md  README.md  design.MD  mcloop.json  pyproject.toml  session-start-hook.py  settings.example.json  telegram-permission-hook.py
loop/: __main__.py  checklist.py  checks.py  main.py  notify.py  runner.py
mcloop/: __main__.py  app_interact.py  audit.py  checklist.py  checks.py  config.py  errors.py  formatting.py  gather.py  git_ops.py  investigate_cmd.py  investigator.py  main.py  notify.py  process_monitor.py  prompts.py  ratelimit.py  reviewer.py  runner.py  session_context.py  sync_cmd.py  targeted.py  web_interact.py  worktree.py  wrap.py
tests/: test_app_interact.py  test_args.py  test_checklist.py  test_checks.py  test_config.py  test_formatting.py  test_hook.py  test_integration.py  test_investigator.py  test_notify.py  test_process_monitor.py  test_ratelimit.py  test_reviewer.py  test_reviewer_live.py  test_runner.py  test_sync_diff.py  test_targeted.py  test_web_interact.py  test_worktree.py  test_wrap.py
tests/integration/: test_checklist_integration.py  test_checks_integration.py  test_failing_task.py  test_minimal_run.py  test_resume_after_kill.py  test_subtask_ordering.py
