[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcloop"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["mcloop"]


[project.scripts]
mcloop = "mcloop.main:main"

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["telegram-permission-hook.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
